plugins {
    id 'java-library'
    id 'jacoco'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

// Read versions from gradle.properties
def eclipsePlatformVersion = project.property('eclipsePlatformVersion')
def eclipseResourcesVersion = project.property('eclipseResourcesVersion')
def eclipseJobsVersion = project.property('eclipseJobsVersion')
def eclipseFilesystemVersion = project.property('eclipseFilesystemVersion')
def eclipseTextVersion = project.property('eclipseTextVersion')
def eclipseEquinoxAppVersion = project.property('eclipseEquinoxAppVersion')
def eclipseEquinoxCommonVersion = project.property('eclipseEquinoxCommonVersion')
def eclipseEquinoxRegistryVersion = project.property('eclipseEquinoxRegistryVersion')
def eclipseEquinoxPrefsVersion = project.property('eclipseEquinoxPrefsVersion')
def eclipseContenttypeVersion = project.property('eclipseContenttypeVersion')
def eclipseExpressionsVersion = project.property('eclipseExpressionsVersion')
def eclipseCoreCommandsVersion = project.property('eclipseCoreCommandsVersion')
def jdtCoreVersion = project.property('jdtCoreVersion')
def jdtCoreManipVersion = project.property('jdtCoreManipVersion')
def jdtLaunchingVersion = project.property('jdtLaunchingVersion')
def ltkRefactoringVersion = project.property('ltkRefactoringVersion')
def eclipseSearchVersion = project.property('eclipseSearchVersion')
def lsp4jVersion = project.property('lsp4jVersion')
def groovyVersion = project.property('groovyVersion')
def gsonVersion = project.property('gsonVersion')
def groovyEclipseIntegrationVersion = project.property('groovyEclipseIntegrationVersion')
def groovyEclipseTrain = project.property('groovyEclipseTrain')
def groovyEclipseBuildQualifier = project.property('groovyEclipseBuildQualifier')

def groovyEclipseP2Base = "https://groovy.jfrog.io/artifactory/plugins-release-local/org/codehaus/groovy/groovy-eclipse-integration/${groovyEclipseIntegrationVersion}/${groovyEclipseTrain}/plugins"
def groovyEclipseGroovyCoreJarName = "org.eclipse.jdt.groovy.core_${groovyEclipseIntegrationVersion}.${groovyEclipseBuildQualifier}.jar"
def groovyEclipseLibDir = layout.buildDirectory.dir('groovy-eclipse-libs')
def groovyEclipseGroovyCoreJar = groovyEclipseLibDir.map { it.file(groovyEclipseGroovyCoreJarName) }

// Configure source directories to match the Eclipse plugin layout
sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
        resources {
            srcDirs = ['src/main/java']
            include '**/*.properties', '**/*.xml'
        }
    }
}

tasks.register('downloadGroovyEclipseCompileOnlyJar') {
    description = 'Download the groovy-eclipse helper bundle used only for compile/test wiring'
    group = 'build'

    outputs.file(groovyEclipseGroovyCoreJar)

    doLast {
        def targetFile = groovyEclipseGroovyCoreJar.get().asFile
        if (!targetFile.exists()) {
            targetFile.parentFile.mkdirs()
            def url = "${groovyEclipseP2Base}/${groovyEclipseGroovyCoreJarName}"
            logger.lifecycle("Downloading groovy-eclipse helper bundle: ${groovyEclipseGroovyCoreJarName}")
            new URL(url).withInputStream { input ->
                targetFile.withOutputStream { output ->
                    output << input
                }
            }
        }
    }
}

dependencies {
    // ---- Eclipse Core Platform (headless) ----
    api "org.eclipse.platform:org.eclipse.core.runtime:${eclipsePlatformVersion}"
    api "org.eclipse.platform:org.eclipse.core.resources:${eclipseResourcesVersion}"
    api "org.eclipse.platform:org.eclipse.core.jobs:${eclipseJobsVersion}"
    api "org.eclipse.platform:org.eclipse.core.filesystem:${eclipseFilesystemVersion}"
    api "org.eclipse.platform:org.eclipse.core.contenttype:${eclipseContenttypeVersion}"
    api "org.eclipse.platform:org.eclipse.core.expressions:${eclipseExpressionsVersion}"
    api "org.eclipse.platform:org.eclipse.core.commands:${eclipseCoreCommandsVersion}"
    api "org.eclipse.platform:org.eclipse.text:${eclipseTextVersion}"

    // ---- Equinox / OSGi ----
    api "org.eclipse.platform:org.eclipse.equinox.app:${eclipseEquinoxAppVersion}"
    api "org.eclipse.platform:org.eclipse.equinox.common:${eclipseEquinoxCommonVersion}"
    api "org.eclipse.platform:org.eclipse.equinox.registry:${eclipseEquinoxRegistryVersion}"
    api "org.eclipse.platform:org.eclipse.equinox.preferences:${eclipseEquinoxPrefsVersion}"

    // ---- OSGi Declarative Services (SCR) ----
    // Required by modern Eclipse Platform bundles (e.g. org.eclipse.core.contenttype)
    // which use DS components and require the osgi.extender=osgi.component capability.
    runtimeOnly "org.apache.felix:org.apache.felix.scr:2.2.12"
    runtimeOnly "org.osgi:org.osgi.service.component:1.5.1"
    runtimeOnly "org.osgi:org.osgi.util.promise:1.3.0"
    runtimeOnly "org.osgi:org.osgi.util.function:1.2.0"

    // ---- JDT (Java Development Tools) ----
    // The patched JDT core from groovy-eclipse replaces this at runtime;
    // we compile against the standard JDT core API.
    api "org.eclipse.jdt:org.eclipse.jdt.core:${jdtCoreVersion}"
    api "org.eclipse.jdt:org.eclipse.jdt.core.manipulation:${jdtCoreManipVersion}"
    api "org.eclipse.jdt:org.eclipse.jdt.launching:${jdtLaunchingVersion}"

    // ---- Refactoring ----
    api "org.eclipse.platform:org.eclipse.ltk.core.refactoring:${ltkRefactoringVersion}"

    // ---- LSP4J (Language Server Protocol for Java) ----
    api "org.eclipse.lsp4j:org.eclipse.lsp4j:${lsp4jVersion}"
    api "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:${lsp4jVersion}"

    // ---- Gson (required by LSP4J) ----
    api "com.google.code.gson:gson:${gsonVersion}"

    // ---- Groovy compiler ----
    // Groovy runtime as a proper OSGi bundle for standalone Groovy compilation support
    api "org.apache.groovy:groovy:${groovyVersion}"

    // ---- groovy-eclipse JDT Groovy Core (compile-only) ----
    // Needed to compile MinimalCodeSelectHelper against ICodeSelectHelper / GroovyCompilationUnit.
    // At runtime the real OSGi bundle is loaded from the plugins/ directory.
    compileOnly files(groovyEclipseGroovyCoreJar)

    // ---- Test ----
    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation "org.apache.groovy:groovy:${groovyVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly files(groovyEclipseGroovyCoreJar)
}

tasks.withType(JavaCompile).configureEach {
    dependsOn 'downloadGroovyEclipseCompileOnlyJar'
}

tasks.withType(Test).configureEach {
    dependsOn 'downloadGroovyEclipseCompileOnlyJar'
}

test {
    useJUnitPlatform()
    // Exclude heavy simulation / saturation tests from the default test run.
    // Run them explicitly via:  ./gradlew :org.eclipse.groovy.ls.core:perfTest
    exclude '**/ExecutorSaturationTest*'
    finalizedBy jacocoTestReport
    testLogging {
        showStandardStreams = true
    }
}

// Separate task for performance / saturation tests
task perfTest(type: Test) {
    useJUnitPlatform()
    include '**/ExecutorSaturationTest*'
    testLogging {
        showStandardStreams = true
    }
    // Give extra heap for sustained workload tests
    maxHeapSize = '1g'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        csv.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

// Build the JAR with the proper OSGi MANIFEST.MF we maintain manually
jar {
    manifest {
        from 'META-INF/MANIFEST.MF'
    }

    // Include plugin.xml in the root of the JAR (required by Eclipse runtime)
    from('.') {
        include 'plugin.xml'
    }
}
